# q

./: Cargo.toml  README.md  config.toml  crypto_bot.log.2026-04-24
data/: sample.csv
src/: main.rs
src/config/: loader.rs  mod.rs
src/data/: binance.rs  candle.rs  csv_loader.rs  mod.rs
src/engine/: mod.rs  runner.rs
src/execution/: account.rs  mod.rs
src/logger/: mod.rs  setup.rs
src/risk/: manager.rs  mod.rs
src/strategy/: mod.rs  rsi.rs  signal.rs
src/webhook/: mod.rs  server.rs
